--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,9 +1,9 @@
 $lightgray: #dfdfdf
 $darkgray: #333
-$purple: #a217e8
-$slate: #2C3B63
-$aqua: #269CA1
-$gold: #FF9700
-$red: #A42420
+$pink: #F5508F
+$purple: #913DC6
+$gold: #DEA336
+$teal: #00AF94
+$blue: #5995D1
 $sans-serif: 'Montserrat', sans-serif
 $accent-color: $purple
