--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 {{ partial "meta.html" . }}
-<body>
+{{ partial "main-header.html"}}
+<body class="home">
 
 <main class="main-wrapper">
  {{ block "main-block" . }}
