--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -5,4 +5,22 @@ html
 body
 	padding: 0
 	margin: 0
-	
+	display: grid
+	grid-template-rows: 50px 1fr 30px
+	grid-template-columns: 20px 1fr 20px
+.main-wrapper
+	grid-row: 2
+	grid-column: 2
+	padding-top: 1rem	
+.main-footer
+	grid-row: 3
+	grid-column: 1/-1
+	background: rgba(black, .25)
+	color: white
+	text-align: center
+	display: flex
+	justify-content: center
+	align-items: center
+	.copyright
+		padding: 0
+		margin: 0
