--- a/assets/sass/home-style.sass
+++ b/assets/sass/home-style.sass
@@ -1,16 +1,22 @@
-.home-content-wrapper
+body.home
 	height: 100vh
 	width: 100vw
 	background-color: $teal
+.home-content-wrapper
 	padding: 0
 	margin: 0
 .bio-paragraph
 	font-family: $sans-serif
 	font-weight: bold
 	color: $darkgray
-	margin: 150px auto
 	padding: 0
-	max-width: 800px
+	font-size: 1.5rem
+	padding: 0 1rem
+	max-width: 700px
+	margin: 3px auto
+	position: relative
+	box-sizing: border-box
+	
 	.bio-activity-link
 		color: white
 		text-decoration: none
