Evening push, finished homepage

--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -9,14 +9,17 @@ body
 	grid-template-rows: 50px 1fr 30px
 	grid-template-columns: 20px 1fr 20px
 .main-wrapper
+	display: flex
+	align-items: center
+	justify-content: center
 	grid-row: 2
 	grid-column: 2
 	padding-top: 1rem	
 .main-footer
 	grid-row: 3
 	grid-column: 1/-1
-	background: rgba(black, .25)
-	color: white
+	color: #333
+	font-size: .9rem
 	text-align: center
 	display: flex
 	justify-content: center
