--- a/assets/sass/home-style.sass
+++ b/assets/sass/home-style.sass
@@ -2,25 +2,23 @@ body.home
 	height: 100vh
 	width: 100vw
 	background-color: $teal
-.home-content-wrapper
-	padding: 0
-	margin: 0
 .bio-paragraph
 	font-family: $sans-serif
 	font-weight: bold
 	color: $darkgray
 	padding: 0
-	font-size: 1.5rem
+	font-size: 2rem
 	padding: 0 1rem
 	max-width: 700px
 	margin: 3px auto
 	position: relative
 	box-sizing: border-box
-	
+	@media screen and (min-width: 700px)
+		font-size: 3rem	
 	.bio-activity-link
 		color: white
 		text-decoration: none
 		border-bottom: 1.5px solid transparent
-		transition: border .3s ease-in-out
+		transition: border .2s ease-in-out
 		&:hover
 			border-bottom-color: white
