--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -3,36 +3,77 @@
 	grid-column: 1 / -1
 	display: flex
 	align-items: center
-	flex-flow: column
-
-.main-nav-link	
-	text-decoration: none
-	color: white
-#main-mini-menu
-	background: rgba(black, .9)
-	width: 100%
-	position: absolute
-	z-index: 10
-	.menu-toggle
+	#menu-toggle
 		align-self: flex-end
-		.open
-			background: blue
-	.main-nav
+		background: none
+		border: none
+		position: fixed
+		z-index: 11
+		top: 10px
+		right: 10px
+		svg
+			height: 1.5rem
+			width: 1.5rem		
+		@media screen and (min-width: 700px)
+			display: none	
+	#main-mini-menu
+		position: absolute
 		display: flex
-		flex-flow: column
 		align-items: center
-		font-weight: bold
+		flex-flow: column
+		background: rgba(black, .9)
 		width: 100%
-		text-align: center
-		.main-nav-link
-			margin: 10px 0
-			padding: 5px 0
-			border-bottom: 1.5px solid transparent
-			&:hover
-				border-color: white
-	@media screen and (min-width: 700px)
+		padding-top: 3rem
+		z-index: 10
+		top: -150%
+		transition: top .3s ease-in-out
+		.main-nav
+			display: flex
+			flex-flow: column
+			align-items: center
+			font-weight: bold
+			width: 100%
+			text-align: center
+			.main-nav-link
+				margin: 10px 0
+				padding: 5px 0
+				font-size: 2rem
+				text-decoration: none
+				text-transform: uppercase
+				color: white
+				border-bottom: 1.5px solid transparent
+				&:hover
+					border-color: white
+		&.open
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+		@media screen and (min-width: 700px)
+			display: none
+	#main-max-menu
+		width: 100%
+		.main-nav
+			display: flex
+			flex-flow: row
+			align-items: center
+			justify-content: flex-end
+			font-weight: bold
+			width: 100%
+			text-align: center
+			.main-nav-link
+				transition: border .2s ease-in-out
+				margin: 0 15px
+				letter-spacing: .9px
+				font-size: 1.1rem
+				text-transform: uppercase
+				padding: 5px 0 0 0
+				text-decoration: none
+				color: white
+				border-bottom: 1.5px solid transparent
+				&:hover
+					border-color: white
+
 		display: none
-#main-max-menu
-	display: none
-	@media screen and (min-width: 700px)
-		display: initial
+		@media screen and (min-width: 700px)
+			display: initial
