--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main-block"}}
 
 	<p class="bio-paragraph">
-		Keisha S Perkins is a freelance designer and developer who <a href="#" class=" bio-activity-link teaches">teaches</a> and <a href="#" class="organizes bio-activity-link ">organizes</a> in her community, and <a href="#" class="writes bio-activity-link ">writes</a> and <a href="#" class="creates bio-activity-link ">creates</a> for the web.
+		Keisha S Perkins is a freelance designer and developer who <a href="/page/teaching.html" class=" bio-activity-link teaches">teaches</a> and <a href="pa/ge/organizing.html" class="organizes bio-activity-link ">organizes</a> in her community, and <a href="#" class="writes bio-activity-link ">writes</a> and <a href="/page/creating.html" class="creates bio-activity-link ">creates</a> for the web.
 	</p>
 
 {{ end }}
