--- a/layouts/partials/main-header.html
+++ b/layouts/partials/main-header.html
@@ -1,19 +1,25 @@
-<header id="main-mini-menu" class="main-header">
-	<button id="menu-toggle" class="menu-toggle">=</button>
-	<nav class="main-nav">
-		<a href="#" class="main-nav-link">Home</a>
-		<a href="#" class="main-nav-link">Teaching</a>
-		<a href="#" class="main-nav-link">Organizing</a>
-		<a href="#" class="main-nav-link">Writing</a>
-		<a href="#" class="main-nav-link">Creating</a>
-	</nav>
-</header>
-<header id="main-max-menu" class="main-header">
-	<nav class="main-nav">
-		<a href="#" class="main-nav-link">Home</a>
-		<a href="#" class="main-nav-link">Teaching</a>
-		<a href="#" class="main-nav-link">Organizing</a>
-		<a href="#" class="main-nav-link">Writing</a>
-		<a href="#" class="main-nav-link">Creating</a>
-	</nav>
+<header class="main-header">
+	<button id="menu-toggle" class="menu-toggle">
+		<svg>
+			<use href="#menu" />
+		</svg>
+	</button>
+	<div class="menu-wrapper" id="main-mini-menu">
+		<nav class="main-nav">
+			<a href="#" class="main-nav-link">Home</a>
+			<a href="#" class="main-nav-link">Teaching</a>
+			<a href="#" class="main-nav-link">Organizing</a>
+			<a href="#" class="main-nav-link">Writing</a>
+			<a href="#" class="main-nav-link">Creating</a>
+		</nav>
+	</div>
+	<div class="menu-wrapper" id="main-max-menu">
+		<nav class="main-nav">
+			<a href="#" class="main-nav-link">Home</a>
+			<a href="#" class="main-nav-link">Teaching</a>
+			<a href="#" class="main-nav-link">Organizing</a>
+			<a href="#" class="main-nav-link">Writing</a>
+			<a href="#" class="main-nav-link">Creating</a>
+		</nav>
+	</div>
 </header>
