--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -27,3 +27,13 @@ body
 	.copyright
 		padding: 0
 		margin: 0
+.list-page-title
+	color: white
+	text-transform: uppercase
+	font-size: 1.2rem
+	.subtitle
+		color: #333333
+		size: .9rem
+		text-transform: none
+.list-content
+	margin-top: 1.5rem
