--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,3 +2,7 @@
 @import base-style
 @import main-header
 @import home-style
+@import creating
+@import organizing
+@import writing
+@import teaching
