--- a/layouts/partials/main-header.html
+++ b/layouts/partials/main-header.html
@@ -5,21 +5,9 @@
 		</svg>
 	</button>
 	<div class="menu-wrapper" id="main-mini-menu">
-		<nav class="main-nav">
-			<a href="#" class="main-nav-link">Home</a>
-			<a href="#" class="main-nav-link">Teaching</a>
-			<a href="#" class="main-nav-link">Organizing</a>
-			<a href="#" class="main-nav-link">Writing</a>
-			<a href="#" class="main-nav-link">Creating</a>
-		</nav>
+		{{ partial "main-nav.html" . }}
 	</div>
 	<div class="menu-wrapper" id="main-max-menu">
-		<nav class="main-nav">
-			<a href="#" class="main-nav-link">Home</a>
-			<a href="#" class="main-nav-link">Teaching</a>
-			<a href="#" class="main-nav-link">Organizing</a>
-			<a href="#" class="main-nav-link">Writing</a>
-			<a href="#" class="main-nav-link">Creating</a>
-		</nav>
+		{{ partial "main-nav.html" . }}
 	</div>
 </header>
