Working on 'writing' page

--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -49,6 +49,7 @@
 			right: 0
 			bottom: 0
 			left: 0
+			height: 100%
 		@media screen and (min-width: 700px)
 			display: none
 	#main-max-menu
@@ -73,7 +74,6 @@
 				border-bottom: 1.5px solid transparent
 				&:hover
 					border-color: white
-
 		display: none
 		@media screen and (min-width: 700px)
 			display: initial
