--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,6 +2,7 @@
 @import base-style
 @import main-header
 @import home-style
+@import list-style
 @import creating
 @import organizing
 @import writing
