Working on 'teaching' page

--- a/assets/sass/teaching.sass
+++ b/assets/sass/teaching.sass
@@ -1,5 +1,16 @@
+$focusColor: $pink
 body.teaching
-	background: $pink
-	.main-wrapper
-		justify-content: flex-start
-		flex-flow: column
+	background: $focusColor
+	.lesson-description
+		margin: 0
+	.lesson-asset-list
+		padding: 0
+		display: flex
+		flex-flow: row wrap
+		margin: 0
+		.lesson-asset
+			list-style: none
+			margin: 10px 10px 10px 0
+			padding: 0
+		.lesson-asset-link
+			
