--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,10 +5,22 @@
 <small class="subtitle">{{ .Params.subtitle }}</small>
 </h1>
 <section class="list-content">
-	{{ $pag := .Paginate .Data.Pages }}
-        {{ range $pag.Pages }}
-            {{ partial "blog-post-card.html" .}}
-        {{ end }}
+
+	{{ if eq .Params.whatPage "writing" }}
+	{{ $pag := (.Paginator 3) .Data.Pages }}
+    {{ range $pag.Pages }}
+      {{ partial "blog-post-card.html" .}}
+    {{ end }}
+	{{ end }}
+
+	{{ if eq .Params.whatPage "teaching" }}
+		{{ range $index, $element := .Sections }}
+			{{ partial "talk-post-card.html" . }}
+		{{ end }}
+	{{ end }}
+	{{ template "_internal/pagination.html" . }}
+
+
 
 </section>
 {{ end }}
