--- a/layouts/partials/blog-post-card.html
+++ b/layouts/partials/blog-post-card.html
@@ -6,7 +6,7 @@
 		<p class="post-description">
 			{{ .Summary | truncate 100 }}
 		</p>
-		<a href="{{ .Permalink }}" class="read-more">Read More ></a>
+		<a href="{{ .Permalink }}" class="action-button read-more">Read More »</a>
 	</section>
 	<footer class="card-footer">
 		<p class="post-meta">
