--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -1,7 +1,7 @@
 html
 	font-family: $sans-serif
 	padding: 0
-	color: #333
+	color: $darkgray
 body
 	padding: 0
 	margin: 0
@@ -11,14 +11,15 @@ body
 .main-wrapper
 	display: flex
 	align-items: center
-	justify-content: center
 	grid-row: 2
 	grid-column: 2
 	padding-top: 1rem	
+	align-items: flex-start
+	flex-flow: column	
 .main-footer
 	grid-row: 3
 	grid-column: 1/-1
-	color: #333
+	color: $darkgray
 	font-size: .9rem
 	text-align: center
 	display: flex
