--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -6,7 +6,7 @@
 	@media screen and (min-width: 700px)
 		font-size: 3rem
 	.subtitle
-		color: #333333
+		color: $darkgray
 		size: 1rem
 		text-transform: none
 		@media screen and (min-width: 700px)
@@ -38,20 +38,23 @@
 			background: rgba(black, .1)
 			padding: 5px 10px
 			margin: 0
-			min-height: 2rem
+			min-height: 3rem
 			display: flex
 			align-items: center
 			.post-title
 				color: white
-				font-size: .9rem
+				font-size: 1rem
 				padding: 0
 				margin: 0
+				letter-spacing: .5px
+				line-height: 1.2
 		.card-body
 			margin: 0
 			padding: 5px 10px
-			font-size: .7rem
+			font-size: .9rem
 			display: flex
 			justify-content: space-between
+			height: 100%
 			flex-flow: column wrap
 			color: white
 		.card-footer
@@ -59,5 +62,20 @@
 			color: white
 			font-size: .6rem
 			border-top: 1px dotted white
-	
+.action-button
+	font-size: .7rem
+	font-weight: bold
+	text-transform: uppercase
+	border: 1px solid white
+	border-radius: 10px
+	padding: 3px 10px
+	margin: 1rem 0 .4rem 0
+	color: white
+	text-align: center
+	color: white
+	text-decoration: none
+	transition: color, background .3s ease
+	&:hover
+		background: white
+		color: $darkgray
 	
