--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,8 +2,9 @@
 @import base-style
 @import main-header
 @import home-style
-@import list-style
 @import creating
 @import organizing
 @import writing
 @import teaching
+@import paginator
+@import list-style
