--- a/assets/sass/writing.sass
+++ b/assets/sass/writing.sass
@@ -1,25 +1,14 @@
+$focusColor: $purple
 body.writing
-	background: $purple
+	background: $focusColor
 	.main-footer 
 		color: #cccccc
-	.main-wrapper
-		align-items: flex-start
-		flex-flow: column
-		.post-description
-			margin: 0
-		.read-more
-			font-size: .55rem
-			font-weight: bold
-			text-transform: uppercase
-			border: 1px solid white
-			border-radius: 10px
-			padding: 3px 4px
-			margin: 1rem 0 .4rem 0
-			color: white
-			text-align: center
-			color: white
-			text-decoration: none
-			width: 13ch
+	.post-description
+		margin: 0
+	.read-more
+		width: 13ch
+		
+
 	
 
 
