Working on lists styles for 'teaching' page

--- a/assets/sass/creating.sass
+++ b/assets/sass/creating.sass
@@ -1,4 +1,7 @@
 
 body.creating
-	$focusColor: $gold
-	background-color: $focusColor
+	background-color: $gold
+	.main-wrapper
+		justify-content: flex-start
+	.main-footer
+		color: $darkgray
