--- a/assets/sass/organizing.sass
+++ b/assets/sass/organizing.sass
@@ -1,3 +1,4 @@
-$focusColor: $blue
 body.organizing
-	background-color: $focusColor
+	background-color: $blue
+	.main-wrapper
+		justify-content: flex-start
