--- a/assets/sass/teaching.sass
+++ b/assets/sass/teaching.sass
@@ -1,6 +1,7 @@
-$focusColor: $pink
 body.teaching
-	background: $focusColor
+	background: $pink
+	.main-wrapper
+		justify-content: flex-start
 	.lesson-description
 		margin: 0
 	.lesson-asset-list
@@ -13,4 +14,3 @@ body.teaching
 			margin: 10px 10px 10px 0
 			padding: 0
 		.lesson-asset-link
-			
