--- a/assets/sass/writing.sass
+++ b/assets/sass/writing.sass
@@ -1,8 +1,7 @@
-$focusColor: $purple
 body.writing
-	background: $focusColor
-	.main-footer 
-		color: #cccccc
+	background: $purple
+	.main-wrapper
+		justify-content: flex-start
 	.post-description
 		margin: 0
 	.read-more
