--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -11,6 +11,7 @@ body
 .main-wrapper
 	display: flex
 	align-items: center
+	justify-content: center
 	grid-row: 2
 	grid-column: 2
 	padding-top: 1rem	
@@ -19,7 +20,7 @@ body
 .main-footer
 	grid-row: 3
 	grid-column: 1/-1
-	color: $darkgray
+	color: white
 	font-size: .9rem
 	text-align: center
 	display: flex
