--- a/assets/sass/paginator.sass
+++ b/assets/sass/paginator.sass
@@ -1,10 +1,14 @@
+.paginator-wrapper
+	grid-column: 1/-1
+	display: flex
+	justify-content: space-around
 .pagination
 	list-style: none
 	display: flex
 	padding: 0
 	margin: 0
 	text-align: center
-	justify-content: space-between		
+	justify-content: space-between
 	li
 		display: flex
 		border-radius: 2px
