--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -8,6 +8,8 @@ body
 	display: grid
 	grid-template-rows: 50px 1fr 30px
 	grid-template-columns: 20px 1fr 20px
+	@media screen and (min-width: 700px)
+		grid-template-columns: 80px 1fr 80px
 .main-wrapper
 	display: flex
 	align-items: center
