Work on single and teaching section
- Added paginator to subsections in "teaching" section
- Changed "whatPage" marker to "whatSection"
- Added "whatSection" to each archetype
- Added gradients to backgrounds
- Tweaked a few styles on mini menu
- Started on single page template

--- a/assets/sass/creating.sass
+++ b/assets/sass/creating.sass
@@ -1,6 +1,7 @@
 
 body.creating
 	background-color: $gold
+	background-image: radial-gradient(lighten($gold, 10%),darken($gold, 2%))
 	.main-wrapper
 		justify-content: flex-start
 	.main-footer
