--- a/assets/sass/teaching.sass
+++ b/assets/sass/teaching.sass
@@ -1,5 +1,6 @@
 body.teaching
-	background: $pink
+	background-color: $pink
+	background-image: radial-gradient(lighten($pink, 10%),darken($pink, 2%))
 	.main-wrapper
 		justify-content: flex-start
 	.lesson-description
