--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -5,5 +5,5 @@ $purple: #913DC6
 $gold: #DEA336
 $teal: #00AF94
 $blue: #5995D1
-$sans-serif: 'Montserrat', sans-serif
+$sans-serif: 'Poppins', sans-serif
 $accent-color: $purple
