--- a/assets/sass/writing.sass
+++ b/assets/sass/writing.sass
@@ -1,5 +1,6 @@
 body.writing
-	background: $purple
+	background-color: $purple
+	background-image: radial-gradient(lighten($purple, 10%),darken($purple, 2%))
 	.main-wrapper
 		justify-content: flex-start
 	.post-description
