--- a/assets/sass/home-style.sass
+++ b/assets/sass/home-style.sass
@@ -1,6 +1,7 @@
 body
 	height: 100vh
 	background-color: $teal
+	background-image: radial-gradient(lighten($teal, 10%),darken($teal, 2%))
 .bio-paragraph
 	font-family: $sans-serif
 	font-weight: bold
