--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -17,7 +17,7 @@
 		@media screen and (min-width: 700px)
 			display: none	
 	#main-mini-menu
-		position: absolute
+		position: fixed
 		display: flex
 		align-items: center
 		flex-flow: column
