Working on single page and taxonomy page templates

--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -57,25 +57,28 @@
 			height: 100%
 			flex-flow: column wrap
 			color: white
+			a
+				color: white
+				font-weight: bold
 		.card-footer
 			padding: 0 10px 1px 
 			color: white
 			font-size: .6rem
 			border-top: 1px dotted white
-.action-button
-	font-size: .7rem
-	font-weight: bold
-	text-transform: uppercase
-	border: 1px solid white
-	border-radius: 10px
-	padding: 3px 10px
-	margin: 1rem 0 .4rem 0
-	color: white
-	text-align: center
-	color: white
-	text-decoration: none
-	transition: color, background .3s ease
-	&:hover
-		background: white
-		color: $darkgray
+		.action-button
+			font-size: .7rem
+			font-weight: bold
+			text-transform: uppercase
+			border: 1px solid white
+			border-radius: 10px
+			padding: 3px 10px
+			margin: 1rem 0 .4rem 0
+			color: white
+			text-align: center
+			color: white
+			text-decoration: none
+			transition: color, background .3s ease
+			&:hover
+				background: white
+				color: $darkgray
 	
