--- a/layouts/partials/main-nav.html
+++ b/layouts/partials/main-nav.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
-	<a href="{{ "/" | relURL }}" class="main-nav-link">Home</a>
-	<a href="{{ "/teaching/" | relURL }}" class="main-nav-link">Teaching</a>
-	<a href="{{ "/organizing/" | relURL }}" class="main-nav-link">Organizing</a>
-	<a href="{{ "/writing/" | relURL }}" class="main-nav-link">Writing</a>
-	<a href="{{ "/creating/" | relURL }}" class="main-nav-link">Creating</a>
+	<a href='{{ "/" | relURL }}' class="main-nav-link">Home</a>
+	<a href='{{ "/teaching/" | relURL }}' class="main-nav-link">Teaching</a>
+	<a href='{{ "/organizing/" | relURL }}' class="main-nav-link">Organizing</a>
+	<a href='{{ "/writing/" | relURL }}' class="main-nav-link">Writing</a>
+	<a href='{{ "/creating/" | relURL }}' class="main-nav-link">Creating</a>
 </nav>
