--- a/assets/sass/home-style.sass
+++ b/assets/sass/home-style.sass
@@ -1,23 +1,23 @@
-body
+body.home
 	height: 100vh
 	background-color: $teal
 	background-image: radial-gradient(lighten($teal, 10%),darken($teal, 2%))
-.bio-paragraph
-	font-family: $sans-serif
-	font-weight: bold
-	color: $darkgray
-	padding: 0
-	font-size: 2rem
-	padding: 0 1rem
-	margin: 3px auto
-	position: relative
-	box-sizing: border-box
-	@media screen and (min-width: 700px)
-		font-size: 3rem	
-	.bio-activity-link
-		color: white
-		text-decoration: none
-		border-bottom: 1.5px solid transparent
-		transition: border .2s ease-in-out
-		&:hover
-			border-bottom-color: white
+	.bio-paragraph
+		font-family: $sans-serif
+		font-weight: bold
+		color: $darkgray
+		padding: 0
+		font-size: 2rem
+		padding: 0 1rem
+		margin: 3px auto
+		position: relative
+		box-sizing: border-box
+		@media screen and (min-width: 700px)
+			font-size: 3rem	
+		.bio-activity-link
+			color: white
+			text-decoration: none
+			border-bottom: 1.5px solid transparent
+			transition: border .2s ease-in-out
+			&:hover
+				border-bottom-color: white
