--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,9 +2,10 @@
 @import base-style
 @import main-header
 @import home-style
+@import list-style
+@import single-style
 @import creating
 @import organizing
 @import writing
 @import teaching
 @import paginator
-@import list-style
