Working on terms template and single post template

--- a/assets/sass/home-style.sass
+++ b/assets/sass/home-style.sass
@@ -2,6 +2,8 @@ body.home
 	height: 100vh
 	background-color: $teal
 	background-image: radial-gradient(lighten($teal, 10%),darken($teal, 2%))
+	.main-wrapper
+		justify-content: center
 	.bio-paragraph
 		font-family: $sans-serif
 		font-weight: bold
