--- a/assets/sass/organizing.sass
+++ b/assets/sass/organizing.sass
@@ -1,5 +1,3 @@
-body.organizing
+body.organizing.section
 	background-color: $blue
 	background-image: radial-gradient(lighten($blue, 10%),darken($blue, 2%))
-	.main-wrapper
-		justify-content: flex-start
