--- a/assets/sass/teaching.sass
+++ b/assets/sass/teaching.sass
@@ -1,8 +1,6 @@
-body.teaching
+body.teaching.section
 	background-color: $pink
 	background-image: radial-gradient(lighten($pink, 10%),darken($pink, 2%))
-	.main-wrapper
-		justify-content: flex-start
 	.lesson-description
 		margin: 0
 	.lesson-asset-list
