--- a/assets/sass/writing.sass
+++ b/assets/sass/writing.sass
@@ -1,8 +1,6 @@
-body.writing
+body.writing.section
 	background-color: $purple
 	background-image: radial-gradient(lighten($purple, 10%),darken($purple, 2%))
-	.main-wrapper
-		justify-content: flex-start
 	.post-description
 		margin: 0
 	.read-more
