--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -4,6 +4,8 @@ html
 	color: $darkgray
 body
 	padding: 0
+	min-height: 100vh
+	background-repeat: no-repeat
 	margin: 0
 	display: grid
 	grid-template-rows: 50px 1fr 30px
@@ -13,7 +15,7 @@ body
 .main-wrapper
 	display: flex
 	align-items: center
-	justify-content: center
+	justify-content: flex-start
 	grid-row: 2
 	grid-column: 2
 	padding-top: 1rem	
