--- a/assets/sass/creating.sass
+++ b/assets/sass/creating.sass
@@ -1,8 +1,5 @@
-
-body.creating
+body.creating.section
 	background-color: $gold
 	background-image: radial-gradient(lighten($gold, 10%),darken($gold, 2%))
-	.main-wrapper
-		justify-content: flex-start
 	.main-footer
 		color: $darkgray
