--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -3,6 +3,7 @@
 @import main-header
 @import home-style
 @import list-style
+@import taxonomy-style
 @import single-style
 @import creating
 @import organizing
