Working on single page styles

--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -20,7 +20,8 @@ body
 	grid-column: 2
 	padding-top: 1rem	
 	align-items: flex-start
-	flex-flow: column	
+	flex-flow: column
+	margin-bottom: 3rem	
 .main-footer
 	grid-row: 3
 	grid-column: 1/-1
