--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,6 @@
 <script src="{{ $scripts.Permalink }}" type="text/javascript"></script>
 
 <footer class="main-footer">
-	<p class="copyright">Copyright&nbsp;&copy;&nbsp;Keisha S Perkins <span class="currentrear">2018</span></p>
+	<p class="copyright">Copyright&nbsp;&copy;&nbsp;Keisha S Perkins {{ dateFormat "2006" .Site.LastChange }}</p>
 </footer>
 
