--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -65,6 +65,14 @@
 			color: white
 			font-size: .6rem
 			border-top: 1px dotted white
+			.author-names
+				display: inline
+				padding: 0
+				margin: 0
+				li
+					display: inline
+					&:not(:last-child):after
+						content: ","
 		.action-button
 			font-size: .7rem
 			font-weight: bold
