--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -5,5 +5,12 @@ $purple: #913DC6
 $gold: #DEA336
 $teal: #00AF94
 $blue: #5995D1
+
+$writing-focus-color: $purple
+$teaching-focus-color: $pink
+$creating-focus-color: $gold
+$main-focus-color: $teal
+$organizing-focus-color: $blue
+
 $sans-serif: 'Poppins', sans-serif
-$accent-color: $purple
+
