--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -3,6 +3,7 @@
 	text-transform: uppercase
 	font-size: 2rem
 	width: 100%
+	line-height: .9
 	@media screen and (min-width: 700px)
 		font-size: 3rem
 	.subtitle
